# xlab_abstergo_58

./: README.md  docker-compose.yml
data/: example.auth.json  main.py  script_generator.py  vocal_extractor.py  yandex_pipeline.py
data/.ipynb_checkpoints/: auth-checkpoint.json  dataset-checkpoint.csv  queries-checkpoint.txt  vocal_extractor-checkpoint.py  yandex-checkpoint.csv  yandex_pipeline-checkpoint.py
ml-service/: config.py  requirements.txt
ml-service/tts/model/: encoder.py
ml-service/tts/research/: silero_v1_encoder_experements.ipynb
open-musiclm/: dataset.py  inference_musiclm.ipynb  musiclm_layers.ipynb  silero_test.ipynb  silero_v1_encoder_experements.ipynb  train.ipynb  transformer.ipynb  yandex.csv
open-musiclm/checkpoints_new/: kmeans_10s_no_fusion.joblib
open-musiclm/configs/model/: musiclm_hackaton.json
open-musiclm/configs/training/: train_hackaton.json
open-musiclm/open_musiclm/: open_musiclm.py
open-musiclm/scripts/: train_clap_rvq.py
open-musiclm/tts/model/: encoder.py
open-musiclm/tts/research/: tts_audio.ipynb
server/: .env  Dockerfile-celery  Dockerfile-fastapi  Dockerfile-mkdocs  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  tasks.py
server/docs/: index.md
streamlit/: Dockerfile-streamlit  client.py  pyproject.toml  requirements.txt
